Use the vectorized version of the plot during the exprot for all plot types and not for XYCurve only.

BUG: 489861
FIXED-IN: 2.11